# obelisk

./: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad_macos/include/glad/: glad.h
lib/glad_macos/src/: glad.c
lib/glad_windows/src/: glad.c
shaders/: basic.vert  fragmentShader.frag  light.frag  litObject.frag  vertexShader.glsl  vertexShader.vert
src/: glad.c  main.cpp  obCamera.cpp  obCamera.h  obShader.cpp  obShader.h
